[package]
name = "MrRewards"
version = "0.1.0"
edition = "2021"
authors = ["adrena.corto@gmail.com"]
homepage = "https://github.com/AdrenaFoundation/MrRewards"
repository = "https://github.com/AdrenaFoundation/MrRewards"
license = "Apache-2.0"
keywords = ["rewards", "solana", "grpc", "rust", "adrena", "rewards"]
publish = true

[[bin]]
path = "./src/client.rs"
name = "mrrewards"

[dependencies]
anyhow = "1.0.62"
borsh = "1.5.1"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
log = "0.4.17"
maplit = "1.0.2"
serde_json = "1.0.86"
solana-sdk = "2.0.18"
solana-transaction-status = "2.0.18"
solana-client = "2.0.18"
solana-account-decoder = "2.0.18"
tonic = "0.12.3"
sha2 = "0.10.8"
num-traits = "0.2.19"
adrena-abi = { git = "https://github.com/AdrenaFoundation/adrena-abi.git", rev = "22acf074b5c0b2a87cbc964be7e7de0516f6fce0" }
# anchor-client = { version = "0.29.0", features = ["async"] }
# Waiting for 0.31.0 release - includes a fix on the async - https://github.com/coral-xyz/anchor/pull/3057
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464", features = [
    "async",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "04536725c2ea16329e84bcfe3200afd47eeeb464" }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.12"
openssl = "0.10.50"
postgres-openssl = "0.5.0"

[profile.release]
lto = true
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/v2.0.4/Cargo.toml#L502-L533
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
